Animação banner, sobre_mim, Ferramentas e começo da ilustração

--- a/index.html
+++ b/index.html
@@ -3,29 +3,91 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-			<title>Template Bootstrap</title>
-			<link href="css/style.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">		
+			<title>Cristian Renato</title>
+			<link href="css/style.css" rel="stylesheet">		
+			<script src="js/script.js"></script> <!-- Modernizr -->
 		</head>
 	<body>
-
 		<header>
-			<nav>
-				<div class="logo">
-					<img class="lobo" src="img/LOGO-CRIS_02.png">
+			<div class="splitview skewed">
+        		<div class="panel bottom">
+            		<div class="content">
+	                <div class="description">
+	                    <h1>The original image.</h1>
+	                    <p>This is how the image looks like before applying a duotone effect.</p>
+	                </div>
+					<img src="img/img-original.jpg"> 
 				</div>
-				<div class="redes_sociais">
-					<ul>
-						<li><a href=""><img class="icon_svg" src="icon/zap-zap.svg"></a></li>
-						<li><a href=""><img class="icon_svg" src="icon/email.svg"></a></li>
-						<li><a href=""><img class="icon_svg" src="icon/facebook.svg"></a></li>
-						<li><a href=""><img class="icon_svg" src="icon/instagram.svg"></a></li>
-						<li><a href=""><img class="icon_svg" src="icon/linkedin.svg"></a></li>
-					</ul>
-				</div>
-			</nav>
+			</div>
+			<div class="panel top">
+	            <div class="content">
+	                <div class="description">
+	                    <h1>The duotone image.</h1>
+	                    <p>This is how the image looks like after applying a duotone effect.</p>
+	                </div>
+	                <img src="img/img-modified.jpg">
+	            </div>
+        	</div>
+        <div class="handle"></div>
+    	</div>
+		<div class="barra_tarefas">				
+				<nav>
+					<div class="logo">
+						<img class="lobo" src="img/LOGO-CRIS_02.png">
+					</div>
+					<div class="redes_sociais">
+						<ul>
+							<li><a href=""><img class="icon_svg" src="icon/zap-zap.svg"></a></li>
+							<li><a href=""><img class="icon_svg" src="icon/email.svg"></a></li>
+							<li><a href=""><img class="icon_svg" src="icon/facebook.svg"></a></li>
+							<li><a href=""><img class="icon_svg" src="icon/instagram.svg"></a></li>
+							<li><a href=""><img class="icon_svg" src="icon/linkedin.svg"></a></li>
+						</ul>
+					</div>
+				</nav>
+		</div>			
 		</header>
-
-		<script type="text/javascript" src="script.js"></script>
+		<section>
+			<div class="section_left">
+				<h1 class="titulo">Sobre mim</h1>
+				<p class="texto">
+					Sou recém formado em<br>
+					Análise e Desenvolvimento de Sistemas<br>
+					na Universidade Eniac.<br>
+					Gosto de transformar problemas em<br>
+					Designer Simples, bonitos e intuitivos.<br>
+					Se eu não estiver codificando, você me<br>
+					encontrara tocando violão ou lendo<br>
+					algum livro.<br>
+				</p>
+			</div>
+			<div class="section_right">	
+				<img class="cristian" src="img/cris.gif">			
+				<div class="retangulo"></div>
+				<img class="pincel" src="img/133.png">				
+			</div>
+			<div class="divisão_skil">
+				<h1 class="titulo_skil">Ferramentas</h1>				
+			</div>
+			<div class="imagem_skill">
+				<ul>
+					<li class="linha"><img class="skil" src="img/html.png"></li>						
+					<li class="linha"><img class="skil" src="img/html.png"></li>						
+					<li class="linha"><img class="skil" src="img/html.png"></li>						
+					<li class="linha"><img class="skil" src="img/html.png"></li>
+				</ul>						
+			</div>
+			<div class="imagem_skill_under">
+				<ul>
+					<li class="linha"><img class="skil" src="img/html.png"></li>
+					<li class="linha"><img class="skil" src="img/html.png"></li>
+					<li class="linha"><img class="skil" src="img/html.png"></li>
+				</ul>
+			</div>
+			<div class="section_ilustracao">
+				<h1 class="ilustracao">Ilustração</h1>
+			</div>							
+		</section>		
   	</body>
 </html>
