--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         		<div class="panel bottom">
             		<div class="content">
 	                <div class="description">
-	                    <h1>The original image.</h1>
-	                    <p>This is how the image looks like before applying a duotone effect.</p>
+	                    <p id="prof">Code</p>	                    
 	                </div>
 					<img src="img/img-original.jpg"> 
 				</div>
@@ -23,8 +22,7 @@
 			<div class="panel top">
 	            <div class="content">
 	                <div class="description">
-	                    <h1>The duotone image.</h1>
-	                    <p>This is how the image looks like after applying a duotone effect.</p>
+	                    <p id="prof">Design</p>	                   
 	                </div>
 	                <img src="img/img-modified.jpg">
 	            </div>
@@ -38,19 +36,20 @@
 					</div>
 					<div class="redes_sociais">
 						<ul>
-							<li><a href=""><img class="icon_svg" src="icon/zap-zap.svg"></a></li>
-							<li><a href=""><img class="icon_svg" src="icon/email.svg"></a></li>
-							<li><a href=""><img class="icon_svg" src="icon/facebook.svg"></a></li>
-							<li><a href=""><img class="icon_svg" src="icon/instagram.svg"></a></li>
-							<li><a href=""><img class="icon_svg" src="icon/linkedin.svg"></a></li>
+							<li><a href="https://api.whatsapp.com/send?1=ptBR&phone=5511949389925"><img class="icon_svg" src="icon/zap-zap.svg"></a></li>
+							<li><a href="mailto:cristianhiei@gmail.com"><img class="icon_svg" src="icon/email.svg"></a></li>
+							<li><a href="https://www.facebook.com/cristianrenato.andrademelo"><img class="icon_svg" src="icon/facebook.svg"></a></li>
+							<li><a href="https://www.instagram.com/utopia_games_toy/?hl=pt-br"><img class="icon_svg" src="icon/instagram.svg"></a></li>
+							<li><a href="https://www.linkedin.com/feed/"><img class="icon_svg" src="icon/linkedin.svg"></a></li>
 						</ul>
 					</div>
 				</nav>
 		</div>			
 		</header>
-		<section>
+
+		<section class="conteudo">
 			<div class="section_left">
-				<h1 class="titulo">Sobre mim</h1>
+				<p class="titulo">Sobre mim</p>
 				<p class="texto">
 					Sou recém formado em<br>
 					Análise e Desenvolvimento de Sistemas<br>
@@ -68,26 +67,65 @@
 				<img class="pincel" src="img/133.png">				
 			</div>
 			<div class="divisão_skil">
-				<h1 class="titulo_skil">Ferramentas</h1>				
+				<p class="titulo_skil">Ferramentas</p>				
 			</div>
-			<div class="imagem_skill">
-				<ul>
-					<li class="linha"><img class="skil" src="img/html.png"></li>						
-					<li class="linha"><img class="skil" src="img/html.png"></li>						
-					<li class="linha"><img class="skil" src="img/html.png"></li>						
-					<li class="linha"><img class="skil" src="img/html.png"></li>
-				</ul>						
+			<div class="container">
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>						
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>						
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>						
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>									
 			</div>
-			<div class="imagem_skill_under">
-				<ul>
-					<li class="linha"><img class="skil" src="img/html.png"></li>
-					<li class="linha"><img class="skil" src="img/html.png"></li>
-					<li class="linha"><img class="skil" src="img/html.png"></li>
-				</ul>
+			<div class="container_1">
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>						
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>						
+					<div class="habilidade"><img class="skil" src="img/html.png"></div>
 			</div>
-			<div class="section_ilustracao">
-				<h1 class="ilustracao">Ilustração</h1>
-			</div>							
-		</section>		
+			<div class="ilustracao">
+				<p class="titulo_ilus">
+					Ilustrações
+				</p>
+			</div>
+			<div class="container">
+				<div class="slide_1"></div>						
+				<div class="slide_2"></div>						
+				<div class="slide_3"></div>				
+			</div>
+			<div class="coder">
+				<p class="titulo_ilus">
+					Coder
+				</p>
+			</div>
+			<div class="container">
+				<div class="slide_1"></div>						
+				<div class="slide_2"></div>						
+				<div class="slide_3"></div>				
+			</div>			
+		</section>
+		<div class="back_form">
+			<img class="form" src="img/jp.jpg"></img>						
+			<div class="form_direito">
+				<p class="can_help">Como posso te ajudar?</p>
+				<form method="POST" action="#">
+					<input placeholder="Nome:" id="place" type="text" name="txtnome"><br>
+					<input placeholder="Telefone:" id="place" type="text" name="txtnome"><br>
+					<input placeholder="E-mail:" id="place" type="email" name="txtnome"><br>
+					<label>Mensagem:</label><br>
+					<textarea rows="15" cols="52"></textarea><br>
+					<button class="ok">						
+							<span></span>
+  							<span></span>
+  							<span></span>
+  							<span></span>
+							Enviar</a>												
+					</button>
+				</form>		
+			</div>
+			<div class="form_esquerdo">
+				<img class="japao" src="img/form.jpg"></img>
+			</div>
+		</div>
+		<footer>
+			<h6>2019 Cristian R.</h6>
+		</footer>
   	</body>
 </html>
