--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	                <div class="description">
 	                    <p id="prof">Code</p>	                    
 	                </div>
-					<img src="img/img-original-cris.jpg"> 
+					<img class="original" src="img/img-original-cris.jpg"> 
 				</div>
 			</div>
 			<div class="panel top">
@@ -28,7 +28,7 @@
 	                <div class="description">
 	                    <p id="prof">Design</p>	                   
 	                </div>
-	                <img src="img/img-modified-cris.jpg">
+	                <img class="modificado"src="img/img-modified-cris.jpg">
 	            </div>
         	</div>
         <div class="handle"></div>
@@ -70,6 +70,12 @@
 				<div class="retangulo"></div>
 				<img class="pincel" src="img/133.png">				
 			</div>
+			<div class="img_code">
+				<img src="img/code.png">
+			</div>
+			<div class="img_lobinho">
+				<img id="lobinho" src="img/lobinho.png">
+			</div>			
 			<div class="divisão_skil">
 				<p class="titulo_skil">Ferramentas</p>				
 			</div>
@@ -89,31 +95,30 @@
 					Ilustrações
 				</p>
 			</div>
-			<div class="container">
-				 <!-- Swiper -->
-			<div class="swiper-container">
-			    <div class="swiper-wrapper">
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			      <div class="swiper-slide"></div>
-			    </div>
-    		<!-- Add Pagination -->
-    		<div class="swiper-pagination"></div>
-  			</div>							
+			<div class="container mayk">				 
+				<div class="swiper-container">
+				    <div class="swiper-wrapper">
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				      <div class="swiper-slide"></div>
+				    </div>
+	    		
+	    			<div class="swiper-pagination"></div>
+	  			</div>							
 			</div>
 			<div class="coder">
-				<p class="titulo_ilus">
+				<p class="titulo_coder">
 					Coder
 				</p>
 			</div>
-			<div class="container">
+			<div class="container mayk_1">
 				<!-- Swiper -->
 			<div class="swiper-container">
 			    <div class="swiper-wrapper">
@@ -128,12 +133,12 @@
 			      <div class="swiper-slide"></div>
 			      <div class="swiper-slide"></div>
 			    </div>
-    		<!-- Add Pagination -->
+    		<!--Add Pagination-->
     		<div class="swiper-pagination"></div>			
 			</div>			
 		</section>
 		<div class="back_form">
-			<img class="form" src="img/jp.jpg"></img>						
+			<img id="img" class="form" src="img/jp.jpg"></img>						
 			<div class="form_direito">
 				<p class="can_help">Como posso te ajudar?</p>
 				<form method="POST" action="#">
@@ -142,16 +147,16 @@
 					<input placeholder="E-mail:" id="place" type="email" name="txtnome"><br>
 					<label>Mensagem:</label><br>
 					<textarea rows="15" cols="52"></textarea><br>
-					<button class="ok">						
-							<span></span>
-  							<span></span>
-  							<span></span>
-  							<span></span>
-							Enviar</a>												
-					</button>
+						<button class="ok">						
+								<span></span>
+	  							<span></span>
+	  							<span></span>
+	  							<span></span>
+								Enviar</a>												
+						</button>
 				</form>		
-			</div>
-			<div class="form_esquerdo animated bounce delay-2s">
+			</div>		
+			<div class="form_esquerdo">
 				<img class="japao" src="img/form.jpg"></img>
 			</div>
 		</div>
