--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<img class="pincel" src="img/133.png">				
 			</div>
 			<div class="img_code">
-				<img src="img/code.png">
+				<img class="fig_cod" src="img/code.png">
 			</div>
 			<div class="img_lobinho">
 				<img id="lobinho" src="img/lobinho.png">
@@ -121,27 +121,29 @@
 			</div>			
 		</section>
 		<div class="back_form">
-			<img id="img" class="form" src="img/jp.jpg"></img>						
-			<div class="form_direito animation_d">
-				<p class="can_help">Como posso te ajudar?</p>
-				<form class="form_r" method="POST" action="#">
-					<input placeholder="Nome:" id="place" type="text" name="txtnome"><br>
-					<input placeholder="Telefone:" id="place" type="text" name="txtnome"><br>
-					<input placeholder="E-mail:" id="place" type="email" name="txtnome"><br>
-					<label>Mensagem:</label><br>
-					<textarea></textarea><br>
-						<button class="ok">						
-								<span></span>
-	  							<span></span>
-	  							<span></span>
-	  							<span></span>
-								Enviar</a>												
-						</button>
-				</form>		
-			</div>		
-			<div class="form_esquerdo animation_e">
-				<img class="japao" src="img/form.jpg"></img>
-			</div>
+			<img id="img" class="form" src="img/jp.jpg"></img>			
+				<div class="form_direito animation_d">					
+					<form class="form_r" method="POST" action="#">
+						<p class="can_help">Como posso te ajudar?</p>
+						<div class="jean">
+							<input placeholder="Nome:" id="place" type="text" name="txtnome"><br>
+							<input placeholder="Telefone:" id="place" type="text" name="txtnome"><br>
+							<input placeholder="E-mail:" id="place" type="email" name="txtnome"><br>
+							<label>Mensagem:</label><br>
+							<textarea></textarea><br>
+								<button class="ok">						
+										<span></span>
+			  							<span></span>
+			  							<span></span>
+			  							<span></span>
+										Enviar</a>												
+								</button>
+						</div>
+					</form>		
+				</div>		
+				<div class="form_esquerdo animation_e">
+					<img class="japao" src="img/form.jpg"></img>
+				</div>			
 		</div>
 		<footer>
 			<h6>2019 Cristian R.</h6>
